--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <body>
     <div id="page-wrapper">
     <header id="header">
-      <div class="logo">
+      <div class="header-img">
         <h1>Think Goose</h1>
         </div>
       <nav id="nav-bar">
         <ul>
-          <li><a class="nav-link" href="https://www.thinkgoose.co.uk/shop" target="blank">Shop</a></li>
-          <li><a class="nav-link"href="https://www.thinkgoose.co.uk/blog" target="blank">Blog</a></li>       
-          <li><a class="nav-link" href="https://www.thinkgoose.co.uk/about" target="blank">About</a></li>
+          <li><a class="nav-link" href="#process">Process</a></li>
+          <li><a class="nav-link" href="#prices">Pricing</a></li>       
+          <li><a class="nav-link" href="#subscribe">Subscribe</a></li>
         </ul>
       </nav>
     </header>
@@ -22,10 +22,10 @@
     <main>
    
       <section id="subscribe">
-      <h2 class="subscribe">Sign up to the Think Goose Newsletter</h2>
+      <h2 id="subscribe" class="subscribe">Sign up to the Think Goose Newsletter</h2>
       <form id="form" action="https://www.thinkgoose.co.uk/" target="blank">
         <input id="email" name="email" type="email"     placeholder="Enter your email" required="">
-        <input id="submit" class="btn" type="submit" value="Subscribe">
+        <input id="submit" class="btn2" type="submit" value="Subscribe">
       </form>
       </section>
      
@@ -33,7 +33,7 @@
       <section id="features">
         <div class="grid">
           <div class="icon">
-            <h2>1</h2>
+            <h2 id="process">1</h2>
           </div>
           <div class="description">
             <h2>One-of-a-kind, bespoke digital art</h2>
@@ -60,11 +60,52 @@
               </div>
             </section>
 
-        <section id="video">
-              <iframe width="420" height="315"
+        <section id="watch">
+              <iframe id="video" width="420" height="315"
               src="https://www.youtube.com/embed/ckHzmP1evNU?autoplay=1" frameborder="0" allowfullscreen></iframe>  
         </section>
       
+        <section id="pricing">
+            <div id="pawtrait" class="prices">
+              <div class="level">Pawtrait</div>
+              <h2 id="prices">£65 +VAT</h2>  
+              <ol>
+                  <li>Personalised digital art</li>
+                  <li>Dogs</li>
+                  <li>Cats</li>
+                  <li>Horses</li>
+                  <li>And more!</li>
+                </ol>
+              <button class="btn">Select</button>
+            </div>
+
+            <div id="standard-products" class="prices">
+              <div class="level">Standard Products</div>
+              <h2>£20-50 +VAT</h2>  
+                <ol>
+                  <li>Non-personalised produccts</li>
+                  <li>Dogs</li>
+                  <li>Cats</li>
+                  <li>Horses</li>
+                  <li>And more!</li>
+                </ol>
+              <button class="btn">Select</button>
+            </div>
+
+            <div id="other" class="prices">
+              <div class="level">Other</div>
+              <h2>£x +VAT</h2>  
+                <ol>
+                  <li>Other products</li>
+                  <li>Placeholder text</li>
+                  <li>Placeholder text</li>
+                  <li>Placeholder text</li>
+                  <li>Placeholder text!</li>
+                </ol>
+                <button class="btn">Select</button>
+            </div>
+
+        </section>
    </div>
 
 
